--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-27  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md: Replace dead bit extraction patterns
+	with ones that work.
+
 Sun Jan 27 13:23:40 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* emit-rtl.c (get_mem_attrs): Don't default alignment for non-BLKmode
