--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-27  Kazu Hirata  <kazu@hxi.com>
+
+	* gcc.c-torture/execute/20020127-1.c: New test.
+
 2002-01-27  David Billinghurst  <David.Billinghurst@riotinto.com>
  
 	* g77.dg/f77-edit-i-in.f: New test
