2002-01-26 Andreas Tobler <a.tobler@schweiz.ch>
	* gcc/java/builtins.c (sqrt_builtin): Use BUILT_IN_SQRT, not
	BUILT_IN_SQRTF.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49271 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-26 Andreas Tobler <a.tobler@schweiz.ch>
+	
+	* gcc/java/builtins.c (sqrt_builtin): Use BUILT_IN_SQRT, not
+	BUILT_IN_SQRTF.
+
 2002-01-22  Tom Tromey  <tromey@redhat.com>
 
 	* decl.c (java_init_decl_processing): Use add_predefined_file.
