* verify.cc (class _Jv_BytecodeVerifier): Removed `FIXME' comment 	and to-do list. 	(state::merge): Use current class' class loader. 	(state::print): Print subroutine. 	(state::merge): Don't look at subroutine of unmerged `ret'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49274 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-27  Tom Tromey  <tromey@redhat.com>
+
+	* verify.cc (class _Jv_BytecodeVerifier): Removed `FIXME' comment
+	and to-do list.
+	(state::merge): Use current class' class loader.
+	(state::print): Print subroutine.
+	(state::merge): Don't look at subroutine of unmerged `ret'.
+
 2002-01-26 Andreas Tobler <a.tobler@schweiz.ch>
 
 	* nogc.cc: Remove warnings.
