* java/awt/event/MouseEvent.java (modifiers): Removed field. 	(when): Likewise. 	* java/awt/event/InputEvent.java (modifiers, when): Now 	package-private.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49275 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-27  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/event/MouseEvent.java (modifiers): Removed field.
+	(when): Likewise.
+	* java/awt/event/InputEvent.java (modifiers, when): Now
+	package-private.
+
 	* verify.cc (class _Jv_BytecodeVerifier): Removed `FIXME' comment
 	and to-do list.
 	(state::merge): Use current class' class loader.
