--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-28  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/altivec.h: Remove spurious semicolons.
+
 2002-01-27  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md: Replace dead bit extraction patterns
