* gcc.c-torture/compile/20020120-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49279 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020120-1.c: New test.
+
 2002-01-27  Kazu Hirata  <kazu@hxi.com>
 
 	* gcc.c-torture/execute/20020127-1.c: New test.
