--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-28  Hans-Peter Nilsson  <hp@axis.com>
+
+	* config/cris/cris.h (CRT_CALL_STATIC_FUNCTION): Change to emit
+	atexit call in crtbegin, hooked in after call to frame_dummy;
+	register EH before registering __fini__start.
+
 2002-01-28  Aldy Hernandez  <aldyh@redhat.com>
 
 	* config/rs6000/altivec.h: Remove spurious semicolons.
