--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-28  Loren J. Rittle  <ljrittle@acm.org>
+
+	* fixinc/inclhack.def (strict_ansi_not): Add a bypass based on
+	the old, removed AAA_standards fix.
+	* fixinc/fixincl.x: Rebuilt.
+
 2002-01-28  Hans-Peter Nilsson  <hp@axis.com>
 
 	* config/cris/cris.h (CRT_CALL_STATIC_FUNCTION): Change to emit
