--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-28  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.h: Fix formatting.
+	* config/h8300/h8300.md: Likewise.
+
 2002-01-28  Loren J. Rittle  <ljrittle@acm.org>
 
 	* fixinc/inclhack.def (strict_ansi_not): Add a bypass based on
