--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -400,7 +400,7 @@
     case 5:
       return \"mov.w	%T1,%e0\;mov.w	%T1,%f0\";
     default:
-      abort();
+      abort ();
     }
 }"
   [(set_attr "length" "4,4,8,8,4,4")
@@ -456,7 +456,7 @@
     case 5:
       return \"mov.w	%T1,%e0\;mov.w	%T1,%f0\";
     default:
-      abort();
+      abort ();
     }
 }"
   [(set_attr "length" "4,4,8,8,4,4")
@@ -1302,7 +1302,7 @@
    (set (match_operand:HI 0 "register_operand" "")
 	(match_dup 2))]
   ""
-  "{ operands[2] = gen_reg_rtx (HImode); }")
+  "operands[2] = gen_reg_rtx (HImode);")
 
 (define_insn "neghi2_h8300h"
   [(set (match_operand:HI 0 "register_operand" "=r")
@@ -1332,7 +1332,7 @@
    (set (match_operand:SI 0 "register_operand" "")
 	(match_dup 2))]
   ""
-  "{ operands[2] = gen_reg_rtx(SImode); }")
+  "operands[2] = gen_reg_rtx (SImode);")
 
 (define_insn "negsi2_h8300h"
   [(set (match_operand:SI 0 "register_operand" "=r")
@@ -1625,9 +1625,9 @@
 }"
   [(set_attr "cc" "clobber")
    (set (attr "length")
-     (if_then_else (match_operand:QI 0 "small_call_insn_operand" "")
-		   (const_int 4)
-		   (const_int 8)))])
+	(if_then_else (match_operand:QI 0 "small_call_insn_operand" "")
+		      (const_int 4)
+		      (const_int 8)))])
 
 ;; Call subroutine, returning value in operand 0
 ;; (which must be a hard register).
@@ -1649,9 +1649,9 @@
 }"
   [(set_attr "cc" "clobber")
    (set (attr "length")
-     (if_then_else (match_operand:QI 0 "small_call_insn_operand" "")
-		   (const_int 4)
-		   (const_int 8)))])
+	(if_then_else (match_operand:QI 0 "small_call_insn_operand" "")
+		      (const_int 4)
+		      (const_int 8)))])
 
 (define_insn "nop"
   [(const_int 0)]
