--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-28  Andris Pavenis  <pavenis@latnet.lv>
+
+	* config/i386/djgpp.h: Use STRIP_NAME_ENCODING in macro UNIQUE_SECTION
+
 2002-01-28  Richard Earnshaw  <rearnsha@arm.com>
 
 	* config.gcc (*-*-netbsdelf*): Set up generic parameters.
