* config.gcc: Revert previous change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49290 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-28  Richard Earnshaw  <rearnsha@arm.com>
+
+	* config.gcc: Revert previous change.
+
 2002-01-28  Andris Pavenis  <pavenis@latnet.lv>
 
 	* config/i386/djgpp.h: Use STRIP_NAME_ENCODING in macro UNIQUE_SECTION
