* verify.cc (class _Jv_BytecodeVerifier) [op_invokeinterface]: 	`nargs' byte is number of words, not number of arguments.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49292 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-28  Tom Tromey  <tromey@redhat.com>
+
+	* verify.cc (class _Jv_BytecodeVerifier) [op_invokeinterface]:
+	`nargs' byte is number of words, not number of arguments.
+
 2002-01-27  Tom Tromey  <tromey@redhat.com>
 
 	* java/awt/event/MouseEvent.java (modifiers): Removed field.
