--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-28  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300-protos.h: Remove an unused prototype.
+
 2002-01-28  Roman Zippel  <zippel@linux-m68k.org>
 
 	* toplev.c (lang_independent_init): Round up identifier size.
