* libiberty.h (C_alloca): Add ATTRIBUTE_MALLOC.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49299 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-28  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* libiberty.h (C_alloca): Add ATTRIBUTE_MALLOC.
+
 2001-12-06  Richard Henderson  <rth@redhat.com>
 
 	* demangle.h (no_demangling): New.
