2002-01-28  Phil Edwards  <pme@gcc.gnu.org>
	* MAINTAINERS:  Update my email address.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49305 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-28  Phil Edwards  <pme@gcc.gnu.org>
+
+	* MAINTAINERS:  Update my email address.
+
 2002-01-26  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* configure.in (*-*-netbsd*): New.  Skip target-newlib, 
