--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-28  Kazu Hirata  <kazu@hxi.com>
+
+	* conifg/h8300/h8300.c (h8300_adjust_insn_length): Remove
+	redundant code.
+
 2002-01-28  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* emit-rtl.c (gen_rtx_REG): Check that the PIC_OFFSET_TABLE_REGNUM
