* config/h8300/h8300-protos.h: Update the prototype of 	output_simode_bld. 	* config/h8300/h8300.c (output_simode_bld): Remove an argumen 	'log2'. 	* config/h8300/h8300.md: Adjust to the new prototype.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49308 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -2018,7 +2018,7 @@
 			 (match_operand 2 "const_int_operand" "n")))]
   "TARGET_H8300
    && INTVAL (operands[2]) < 16"
-  "* return output_simode_bld (0, 0, operands);"
+  "* return output_simode_bld (0, operands);"
   [(set_attr "cc" "clobber")
    (set_attr "length" "6")])
 
@@ -2029,7 +2029,7 @@
 			 (match_operand 2 "const_int_operand" "n")))]
   "(TARGET_H8300H || TARGET_H8300S)
    && INTVAL (operands[2]) < 16"
-  "* return output_simode_bld (0, 0, operands);"
+  "* return output_simode_bld (0, operands);"
   [(set_attr "cc" "clobber")
    (set_attr "length" "6")])
 
@@ -2046,7 +2046,7 @@
   "TARGET_H8300
    && INTVAL (operands[2]) < 16
    && (1 << INTVAL (operands[2])) == INTVAL (operands[3])"
-  "* return output_simode_bld (1, 0, operands);"
+  "* return output_simode_bld (1, operands);"
   [(set_attr "cc" "clobber")
    (set_attr "length" "6")])
 
@@ -2059,7 +2059,7 @@
   "(TARGET_H8300H || TARGET_H8300S)
    && INTVAL (operands[2]) < 16
    && (1 << INTVAL (operands[2])) == INTVAL (operands[3])"
-  "* return output_simode_bld (1, 0, operands);"
+  "* return output_simode_bld (1, operands);"
   [(set_attr "cc" "clobber")
    (set_attr "length" "6")])
 
