--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-29  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300-protos.h: Update the prototypes of
+	emit_a_rotate and expand_a_rotate.
+	* config/h8300/h8300.c (emit_a_rotate): Change the type of the
+	first argument to 'enum rtx_code'.
+	(expand_a_rotate): Likewise.
+
 2002-01-28  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300-protos.h: Update the prototype of
