* aclocal.m4: Replace with version copied from libstdc++-v3. 	* configure.in: Update for changes to aclocal and Makefile. 	* configure: Regenerate. 	* Makefile.in: Correct install and uninstall for cross targets. 	* libU77/configure: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49316 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-28  Geoffrey Keating  <geoffk@redhat.com>
+
+	* aclocal.m4: Replace with version copied from libstdc++-v3.
+	* configure.in: Update for changes to aclocal and Makefile.
+	* configure: Regenerate.
+	* Makefile.in: Correct install and uninstall for cross targets.
+	* libU77/configure: Regenerate.
+
 2002-01-20  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* Makefile.in: $(MULTISUBDIR) has an implied leading `/';
