--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-29  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* snapshot-README, snapshot-index.html: New files.
+
 2002-01-06  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* update_web_docs (contrib_file): Remove.
