--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-29  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* snapshot-README, snapshot-index.html: Use expressions such as
+	@DATE@ rather than hardcoded dates.
+
 	* snapshot-README, snapshot-index.html: New files.
 
 2002-01-06  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
