* java/awt/GridLayout.java (layoutContainer): Use number of rows 	to compute height of each cell, and number of columns to compute 	width of each cell. 	* java/awt/Window.java (getOwnedWindows): Don't return null. 	* java/awt/FlowLayout.java (layoutContainer): Set width and height 	of component.  Increment x using horizontal gap, not vertical 	gap.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49320 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2002-01-29  Tom Tromey  <tromey@redhat.com>
+
+	* java/awt/GridLayout.java (layoutContainer): Use number of rows
+	to compute height of each cell, and number of columns to compute
+	width of each cell.
+	* java/awt/Window.java (getOwnedWindows): Don't return null.
+	* java/awt/FlowLayout.java (layoutContainer): Set width and height
+	of component.  Increment x using horizontal gap, not vertical
+	gap.
+
 2002-01-28  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (class _Jv_BytecodeVerifier) [op_invokeinterface]:
