--- a/gcc/doc/sourcebuild.texi
+++ b/gcc/doc/sourcebuild.texi
@@ -843,16 +843,18 @@ FIXME: describe this.
 
 This directory should probably not be used for new tests.
 @item gcc.dg
-This test suite contains tests using the more modern @samp{dg}
-harness.  Magic comments determine whether the file is preprocessed,
-compiled, linked or run.  In these tests, error and warning message
-texts are compared against expected texts or regular expressions given
-in comments.  These tests are run with the options @samp{-ansi
--pedantic} unless other options are given in the test.  Except for the
-@file{noncompile} subdirectory, they are not run with multiple
-optimization options.
+This test suite contains tests using the more modern @samp{dg} harness.
+Magic comments determine whether the file is preprocessed, compiled,
+linked or run.  In these tests, error and warning message texts are
+compared against expected texts or regular expressions given in
+comments.  These tests are run with the options @samp{-ansi -pedantic}
+unless other options are given in the test.  Except as noted below they
+are not run with multiple optimization options.
 @item gcc.dg/cpp
 This subdirectory contains tests of the preprocessor.
+@item gcc.dg/debug
+This subdirectory contains tests for debug formats.  Tests in this
+subdirectory are run for each debug format that the compiler supports.
 @item gcc.dg/format
 This subdirectory contains tests of the @option{-Wformat} format
 checking.  Tests in this directory are run with and without
